# visual_odometry_cpp

./: CMakeLists.txt  main.cpp
include/: frame.h  io.h  layer.h
src/: frame.cpp  io.cpp  layer.cpp
test/: CMakeLists.txt  MyTestSuite.h  make_test_bin.sh  runner  runner.cpp
vo/: CMakeLists.txt  main.cpp
vo/include/: layer.h
vo/src/: layer.cpp
